--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,3 +1,19 @@
+<div class="jumbotron", id="jumbotron1">
+</div>
+
+<div class="jumbotron", id="jumbotron2">
+	<br>
+      <h1 id="home-title"><b>Really Into Make Up?</b></h1>
+      <br><br>
+      <h2 id="home-title"><b>Start your Journey Here and Explore More!</b></h2>
+      <br>
+</div>
+
+<div class="jumbotron", id="jumbotron3">
+</div>
+
+
+
 <div class="modal fade" id="signupModal">
   <div class="modal-dialog">
     <div class="modal-content" id="signupbox">
